--- a/src/App.css
+++ b/src/App.css
@@ -24,19 +24,60 @@
   color: white;
 }
 .screen{
- background-color: #61dafb;
+ background-color: #d3d3d3;
+
   width: 70%;
   height: 70vh;
   border-radius:  30px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+ 
   color: black;
+  -webkit-box-shadow: 0px 0px 14px 3px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 14px 3px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 14px 3px rgba(0,0,0,0.75);
   
 }
-#text{
-  flex: 40px  120px;
+.screen {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  grid-auto-rows: minmax(100px, auto);
 }
+
+.currenttime{
+  grid-column: 1 ;
+  grid-row: 1;
+width: 100%;
+height: 100%;
+border-right:solid;
+border-color: #282c34;
+color:#282c34;
+font-weight: bold;
+
+}
+.senttime{
+
+  grid-column: 2 ;
+  grid-row: 1 ;
+  width: 100%;
+  height: 100%;
+  border-left:solid;
+  color:#282c34;
+  border-color: #282c34;
+  font-weight: bold;
+}
+.text{
+  grid-column: 1 / 3 ;
+  grid-row: 2 / 4 ;
+  width: 100%;
+  height: 100%;
+  border-top:solid;
+  color:#282c34;
+  border-color: #282c34;
+  font-weight: bold;
+}
+
+
 
 .App-link {
   color: #61dafb;
